--- a/index.html
+++ b/index.html
@@ -22,31 +22,31 @@
             <div class="col col-nav col-menu-left">
                 <ul>
                     <li>
-                        <a class="txt13 txtblack" href="#">Perchè Dropbox?</a>
+                        <a class="txt13 txtblack" href="https://www.dropbox.com/business/customers">Perchè Dropbox?</a>
                     </li>
                     <li>
-                        <a class="txt13 txtblack" href="#">Funzioni</a>
+                        <a class="txt13 txtblack" href="https://www.dropbox.com/business/tour">Funzioni</a>
                     </li>
                     <li>
-                        <a class="txt13 txtblack" href="#">Piani e Prezzi</a>
+                        <a class="txt13 txtblack" href="https://www.dropbox.com/plans">Piani e Prezzi</a>
                     </li>
                 </ul>
             </div>
             <div class="col col-nav col-menu-right">
                 <ul>
                     <li>
-                        <a class="txt13 txtblack" href="#">Supporto</a>
+                        <a class="txt13 txtblack" href="https://help.dropbox.com/it-it">Supporto</a>
                     </li>
                     <li>
-                        <a class="txt13 txtblack" href="#">Contatta l'ufficio vendite</a>
+                        <a class="txt13 txtblack" href="https://experience.dropbox.com/it-it/contact">Contatta l'ufficio vendite</a>
                     </li>
                     <li>
-                        <a class="txt13 txtblack" href="#">Accedi</a>
+                        <a class="txt13 txtblack" href="https://www.dropbox.com/login">Accedi</a>
                     </li>
                 </ul>
             </div>
             <div class="col col-nav col-start">
-                <a class="btn btn-small btn-blu" href="#">Inizia</a>
+                <a class="btn btn-small btn-blu" href="https://www.dropbox.com/plans">Inizia</a>
             </div>
         </nav>
     </header>
@@ -62,7 +62,7 @@
                 <p>
                     <div class="jumbotron-image"><img src="img/jumbo.png" alt=""></div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.
                 </p>
-                <a class="btn btn-large btn-blu margin-bottom1" href="#">Inizia la tua prova gratuita</a>
+                <a class="btn btn-large btn-blu margin-bottom1" href="https://www.dropbox.com/business/try">Inizia la tua prova gratuita</a>
                 <div class="txt12">Annulla in qualsiasi momento</div>
                 <i class="fas fa-arrow-down"></i>
             </div>
@@ -92,20 +92,22 @@
                                 </li>
                                 <li class="txt12"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro
                                 </li>
-                                <li class="txt12"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                                <li class="functions txt12"><i id="icon" class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
 
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
                         <div class="buynow txt12">oppure
-                            <a href="#">acquista ora</a>
+                            <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
                         <h5>Punti salienti del piano</h5>
                         <div>
                             <ul class="highlights txt12">
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li class="functions">
+                                    <i id="icon" class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                </li>
                                 <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
                                 <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                 <li><i class="fas fa-check"></i> Filigrana documento</li>
@@ -127,23 +129,26 @@
                                 </li>
                                 <li class="txt12"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro
                                 </li>
-                                <li class="txt12"><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                                <li class=" functions txt12"><i id="icon" class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura
 
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
                         <div class="buynow txt12">oppure
-                            <a href="#">acquista ora</a>
+                            <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
                         <h5>Punti salienti del piano</h5>
                         <div>
                             <ul class="highlights txt12">
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li class="functions">
+                                    <i id="icon" class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                </li>
                                 <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
                                 <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                 <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
                                 <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
                             </ul>
                         </div>
@@ -158,26 +163,29 @@
                         <div class="txtgrey txt12">/utente /mese, a partire da 3 utenti</div>
                         <div>
                             <ul class="included-offer">
-                                <li class="txt12"><i class="far fa-user"></i> 1 Utente
+                                <li class="txt12"><i class="fas fa-user-plus"></i> 1 Utente
                                 </li>
-                                <li class="txt12"><i class="far fa-smile"></i></i> 3 TB di spazio di archiviazione sicuro
+                                <li class="txt12"><i class="far fa-smile"></i> 3 TB di spazio di archiviazione sicuro
                                 </li>
-                                <li class="txt12"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                                <li class="functions txt12"><i id="icon" class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
                         <div class="buynow txt12">oppure
-                            <a href="#">acquista ora</a>
+                            <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
                         <h5>Punti salienti del piano</h5>
                         <div>
                             <ul class="highlights txt12">
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li class="functions">
+                                    <i id="icon" class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                </li>
                                 <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
                                 <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                 <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
                                 <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
                             </ul>
                         </div>
@@ -189,7 +197,7 @@
         <div class="contain-enterprise">
             <div class="txt13"><i class="far fa-building"></i> Team</div>
             <div class="enterprise"> 
-                <h3>Enterprise <a class="btn btn-large btn-blu" href="#">Contatta l'ufficio vendite</a></h3>
+                <h3>Enterprise <a class="btn btn-large btn-blu" href="https://experience.dropbox.com/it-it/contact">Contatta l'ufficio vendite</a></h3>
                 <h5>Contatta l'ufficio vendite per i prezzi</h5>
                 <p class="txt12">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>    
             </div>
@@ -203,7 +211,7 @@
             <div class="col col-text">
                 <h3>Entra in contatto con un partner Dropbox</h3>
                 <p class="txt13">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzione e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                <a class="btn btn-large btn-white" href="#">Trova un partner</a>
+                <a class="btn btn-large btn-white" href="https://www.dropbox.com/it/business/partners">Trova un partner</a>
             </div>
         </div>
 
@@ -219,13 +227,13 @@
                 <div class="col col-operations-center">
                     <img src="img/business-feature-coordinate-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
                 </div>
                 <div class="col col-operations">
                     <img src="img/business-feature-multi-device.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
 
@@ -233,20 +241,19 @@
                 <div class="col col-operations">
                     <img src="img/business-feature-integrations-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
                 <div class="col col-operations-center">
                     <img src="img//business-feature-send-files-it.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
                 </div>
                 <div class="col col-operations">
                     <img src="img/business-feature-security.png" alt="">
                     <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
-
             </div>
 
         </div>
